--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
   },
